@@ -4,13 +4,13 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content" >
     
-	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	<LinearLayout
 	    android:id="@+id/setglobalproperties_Root"
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
 	    android:layout_marginLeft="10dip"
 	    android:layout_marginRight="10dip"
-	    android:minWidth="300px"
+	    android:minWidth="300dp"
 	    android:orientation="vertical"
 	    android:paddingLeft="10dip"
 	    android:paddingRight="10dip" >
@@ -79,7 +79,7 @@
 	
 	        <EditText
 	            android:id="@+id/setglobalproperties_vrHelpItemPos"
-	            android:layout_width="match_parent"
+	            android:layout_width="0dp"
 	            android:layout_height="wrap_content"
 	            android:layout_weight="1"
 	            android:inputType="number"
