@@ -5,11 +5,10 @@
     android:layout_height="wrap_content" >
     
 	<LinearLayout
-	    xmlns:android="http://schemas.android.com/apk/res/android"
 	    android:id="@+id/itemRoot"
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
-	    android:minWidth="400px"
+	    android:minWidth="400dp"
 	    android:orientation="vertical"
 	    android:paddingLeft="20dip"
 	    android:paddingRight="20dip" >
